# ai-monitoring-dashboards

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboards/: agent-orchestration.json  llm-api-monitor.json  model-performance.json
demo/: app.py  mock_agents.py  mock_llm.py  mock_model.py
infra/grafana/: grafana.ini
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
src/ai_monitor/: __init__.py  agent_metrics.py  config.py  decorators.py  llm_metrics.py  model_metrics.py
tests/: test_agent_metrics.py  test_decorators.py  test_llm_metrics.py  test_model_metrics.py
