[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-monitoring-dashboards"
version = "0.1.0"
description = "Pre-built Grafana dashboards and Prometheus metrics library for AI/ML monitoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pranav Shastri" }]
dependencies = [
    "prometheus-client>=0.20.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1", "ruff>=0.3.0", "httpx>=0.27.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_monitor"]
